# redis-project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  utils.py
docker/: docker-compose.yml
src/: baseline.py  compare.py  config.py  create_datasets.py  create_router.py  delete_router.py  file_utils.py  metrics_utils.py  models.py  openai_utils.py  with_router.py
