[project]
name = "redis-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy<2.0",
    "pydantic-ai-slim[openai]>=0.8.1",
    "python-dotenv>=1.2.1",
    "redisvl>=0.10.0",
    "sentence-transformers>=5.1.2",
]